--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,23 +1,25 @@
 {
   "app.about.title": "About me",
-  "app.about.contact": "Alex Bazha, Moscow (now in Georgia)",
+  "app.about.contact": "Alex Bazha",
+  "app.about.repository": "Git repository",
+  "app.about.location": "Location: Moscow (now Georgia)",
   "app.about.languages": "Specializing in Python, Dart and JS/TS",
   "app.about.talkon.title": "Talk languages",
   "app.about.talkon": "english and russian",
   "app.about.tasks.title": "Tasks",
   "app.about.tasks": "App architecture and development. Code refactoring, optimization, testing and review. Prototype UI for most apps. Work with different APIs. Data calculation. Fill FAQ. Participation in the development of infrastructure, improvement of the internal processes of the company.",
-  "app.about.skills": "Proficient in Python, Dart, and JS/TS. Experienced in developing web applications using popular frameworks such, Django, Flutter and React. Knowledgeable in database management systems such as MySQL, PostgreSQL. Experienced in using version control systems such as Git. Proficient in Agile methodologies such as Scrum and Kanban. Familiar with cloud computing platforms such as AWS and GCP. Strong problem-solving and analytical skills.",
+  "app.about.skills": "Proficient in Python, Dart, and JS/TS. Experienced in developing web applications using popular frameworks such Django, Flutter and React. Knowledgeable in database management systems such as MySQL, PostgreSQL. Experienced in using version control systems such as Git. Proficient in Agile methodologies such as Scrum and Kanban. Strong problem-solving and analytical skills.",
   "app.about.edu.title": "Education",
   "app.about.edu": "Moscow State University of Economics, Statistics and Informatics, Applied Informatics in Economics",
   "app.about.ref.title": "References",
   "app.about.ref": "Available upon request",
   "app.skills.title": "Skills",
-  "app.skills.python": "Practice more than 4 years",
+  "app.skills.python": "More than 4 years expirience",
   "app.skills.python.info": "Apps development, robots to automate jobs, work using differnet API",
   "app.skills.js": "More than 4 years expirience",
   "app.skills.js.info": "UI for my aps. BTC mining pool on node.js",
   "app.skills.dart": "Practice more than 2 years",
-  "app.skills.dart.info": "No commerce projects, just create pet-apps",
+  "app.skills.dart.info": "No commerce app development",
   "app.skills.additional": "Additional",
   "app.skills.additional.info": "postgresql, docker(compose), git, web3, geth, html, css (sass preprocessor), svg/rive vector graphics/animation",
   "app.experience.link": "Experience",
