--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -1,18 +1,20 @@
 {
   "app.about.title": "Обо мне",
-  "app.about.contact": "Александр Бажа, Москва (сейчас в Грузии)",
+  "app.about.contact": "Александр Бажа",
+  "app.about.repository": "Git репозиторий",
+  "app.about.location": "Расположение: Москва (сейчас в Грузии)",
   "app.about.languages": "Специализируюсь на Python, Dart и JS/TS",
   "app.about.talkon.title": "Знание языков",
   "app.about.talkon": "английский и русский",
   "app.about.tasks.title": "Задачи",
   "app.about.tasks": "Архитектура и разработка приложений. Рефакторинг кода, оптимизация, тестирование и проверка. Прототип пользовательского интерфейса для большинства приложений. Работа с разными API. Расчет данных. Заполнение FAQ. Участие в развитии, улучшении внутренних процессов компании.",
-  "app.about.skills": "Владею Python, Dart и JS/TS. Имеет опыт разработки веб-приложений с использованием популярных фреймворков, таких как Django, Flutter и React. Знание систем управления базами данных, таких как MySQL, PostgreSQL. Опыт работы с системами контроля версий, такими как Git. Владею такими Agile-методологиями, как Scrum и Kanban. Знаком с платформами облачных вычислений, такими как AWS и GCP. Сильные навыки решения проблем и аналитические способности.",
+  "app.about.skills": "Владею Python, Dart и JS/TS. Имеет опыт разработки веб-приложений с использованием популярных фреймворков, таких как Django, Flutter и React. Знание систем управления базами данных, таких как MySQL, PostgreSQL. Опыт работы с системами контроля версий, такими как Git. Владею такими Agile-методологиями, как Scrum и Kanban.  Решения проблем разной сложности, а так же аналитические способности.",
   "app.about.edu.title": "Высшее образование",
   "app.about.edu": "Московский Государственный Университет Математики Статистики и Информатики прикладная информатика в экономике, Информатик-Экономист",
   "app.about.ref.title": "Рекомендации",
   "app.about.ref": "Доступен по запросу",
   "app.skills.title": "Навыки",
-  "app.skills.python": "Практика более 4 лет",
+  "app.skills.python": "Опыт более 4 лет",
   "app.skills.python.info": "Разработка приложений, роботы для автоматизации работы, работа с разными API",
   "app.skills.js": "Опыт более 4 лет",
   "app.skills.js.info": "Интерфейс для моих приложений. BTC майнинг пул на node.js",
