--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -21,14 +21,14 @@
   "app.skills.dart": "Practice more than 2 years",
   "app.skills.dart.info": "No commerce app development",
   "app.skills.additional": "Additional",
-  "app.skills.additional.info": "postgresql, docker(compose), git, web3, geth, html, css (sass preprocessor), svg/rive vector graphics/animation",
+  "app.skills.additional.info": "postgresql, docker(compose), git, celery, redis, web3, geth, html, css (sass preprocessor), svg/rive vector graphics/animation",
   "app.experience.link": "Experience",
   "app.experience.title": "Professional Experience",
   "app.experience.language": "Language",
   "app.experience.mygames.projects": "Projects: ads robot",
   "app.experience.mygames.content": "Worked on the development of a robot for automatic placement/replacement of advertisements on facebook, google (youtube), ironsource, tic-tok.",
   "app.experience.theabyss.projects": "Projects: mining pool, translate platform, marketplace",
-  "app.experience.theabyss.content": "Creation of service for localization. Message service for working with external and internal messaging systems (Slack, Discord, Telegram, Twitter...). Mining pool development. Support for the server part of the game portal. Flutter(dart)+React(JS): UI for the above services. nodeJS(ts): Blockchain integration. Model and architecture for the marketplace. For almost all applications, he implemented a UI prototype on React and Angular.",
+  "app.experience.theabyss.content": "Creation of service for localization. Message service for working with external and internal messaging systems (Slack, Discord, Telegram, Twitter...). Mining pool development. Support for the server part of the game portal. Flutter(dart)+React(JS): UI for the above services. nodeJS(ts): Blockchain integration. Model and architecture for the marketplace. For almost all applications, implemented a UI prototype on React and Angular.",
   "app.experience.pilot.projects": "Projects: applications for managing goods in stores",
   "app.experience.pilot.content": "Development of mobile applications for Android and WinSe on the Kalipso framework to control goods for certain types of devices (scanning/printing barcodes). Application architecture (front/back). Deployment of update, licensing, label printing services. Experimental experience in development on Kotlin and Dart.",
   "app.experience.it2g.projects": "Projects: app to create reports",
