--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -12,7 +12,7 @@
   "app.about.edu.title": "Высшее образование",
   "app.about.edu": "Московский Государственный Университет Математики Статистики и Информатики прикладная информатика в экономике, Информатик-Экономист",
   "app.about.ref.title": "Рекомендации",
-  "app.about.ref": "Доступен по запросу",
+  "app.about.ref": "Доступны по запросу",
   "app.skills.title": "Навыки",
   "app.skills.python": "Опыт более 4 лет",
   "app.skills.python.info": "Разработка приложений, роботы для автоматизации работы, работа с разными API",
@@ -21,7 +21,7 @@
   "app.skills.dart": "Практика более 2 лет",
   "app.skills.dart.info": "Разработка собственных приложений (не комерческие)",
   "app.skills.additional": "Дополнительно",
-  "app.skills.additional.info": "postgresql, docker(compose), git, web3, geth, html, css (sass preprocessor), svg/rive векторная графика/анимация",
+  "app.skills.additional.info": "postgresql, docker(compose), git, celery, redis, web3, geth, html, css (sass preprocessor), svg/rive векторная графика/анимация",
   "app.experience.link": "Опыт",
   "app.experience.title": "Профессиональный опыт",
   "app.experience.language": "Язык",
